--- a/css/estilo.css
+++ b/css/estilo.css
@@ -29,7 +29,6 @@ body{
     color: #fff;
     width: 90%;
     margin: 0 auto;
-    
 }
 .cabecera_principal{ 
     background-color: #ffffff;
@@ -102,6 +101,46 @@ body{
     padding: 0.5em 1em;
     margin-bottom: 5px;
 }
+.menu .chef1 img{
+    width: 30%;
+    margin-left: -62%;
+    border-radius: 50%;
+}
+
+.menu .chef1 h3{
+    background-color: orange;
+    width: 20%;
+}
+.chef1 p{
+    color: rgb(20, 20, 19);
+    text-align: left;
+    width: 5%;
+    margin-left: 12%;
+}
+.chef2 img{
+    width: 30%;
+    margin-left: 32%;
+    margin-top: -95%;
+    border-radius: 50%;
+}
+.chef2 p{
+    color: rgb(20, 20, 19);
+    text-align: left;
+    width: 5%;
+    margin-left: 62%;
+}
+
+.menu .chef2 article p{
+    color: rgb(20, 20, 19);
+    text-align: left;
+    width: 12%;
+    margin-left: 12%;
+}
+.menu .chef2 h3{
+    background-color: orange;
+    width: 20%;
+    margin-left: 75%;
+}
 
 .piepagina{
     background-color: #1D1D1D;
@@ -112,3 +151,19 @@ body{
     text-align: center;
     padding: 2em 0;
 }
+
+@media only screen and (max-width: 800px) {
+    body {
+      background-color: rgb(21, 80, 100);
+    }
+  }
+
+  @media only screen and (max-width: 550px) {
+    .menuPlato{
+        width: 90%;
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 10px;
+
+    }
+  }
